<resources>
    <string name="app_name">诚乎</string>
    <string name="img_descript">图片</string>
    <string name="loading_text">装载中</string>
    <string name="input_phone_number">输入手机号</string>
    <string name="password">密码</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="login">登录</string>
    <string name="has_no_account">没有账号？</string>
    <string name="register_immediately">立即注册</string>
    <string name="phone_number_prefix">+86</string>
    <string name="msg_login_duplicate">该账号已在其他设备登录</string>
    <string name="forgot_password_title">忘记密码</string>
    <string name="phone_number">手机号</string>
    <string name="cert_number">验证号</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="complete">完成</string>
    <string name="get_cert_number">获取验证码</string>
    <string name="send_cert_number_already">您好，验证码已发送到您的手机，请注意查收</string>
    <string name="password_changed_success">密码已修改成功</string>
    <string name="request_number">邀请码</string>
    <string name="read_and_accept_license">验证码</string>
    <string name="chengxin_doc"></string>
    <string name="register">注册</string>
    <string name="read_and_accept">我已阅读并同意接受</string>
    <string name="condition">《诚乎服务条款》</string>
    <string name="register_successful">恭喜您，注册成功</string>
    <string name="register_code">为了更好地行使您诚信评价的权益，请完善您的认证信息</string>
    <string name="register_cert">马上认证</string>
    <string name="register_skip">跳过</string>
    <string name="tab_home">首页</string>
    <string name="tab_hot">热点</string>
    <string name="tab_eval">评价</string>
    <string name="tab_follow">关注</string>
    <string name="tab_me">我的</string>
    <string name="familiar">熟人</string>
    <string name="enterprise">企业</string>
    <string name="comedity">产品</string>
    <string name="item">项目</string>
    <string name="serve">服务</string>
    <string name="sort_set">排序</string>
    <string name="condition_set">筛选</string>
    <string name="str_search">搜索</string>
    <string name="search_query_home">搜索诚信代码/用户/企业/产品/项目/服务</string>
    <string name="search_query_eval">搜索诚信代码/用户名/企业名</string>
    <string name="search_query">搜索关键字</string>
    <string name="select_search_content">请先选择定制内容再搜索</string>
    <string name="search_content">搜索定制内容</string>
    <string name="search_history">历史记录</string>
    <string name="chengxin_number">诚信代码</string>
    <string name="video_play">轮播图视频</string>
    <string name="eval_detail">评价详情</string>
    <string name="rate_zero">暂无</string>
    <string name="serve_detail">服务详情</string>
    <string name="serve_comment">服务介绍</string>
    <string name="waiting">请稍候。。。</string>
    <string name="pull_down_to_refresh">下拉更新</string>
    <string name="release_to_update">松开更新</string>
    <string name="is_being_updated">正在更新&#8230;</string>
    <string name="interest">人气</string>
    <string name="trust">诚信度</string>
    <string name="latest">最新</string>
    <string name="city">城市</string>
    <string name="all">全部</string>
    <string name="more">更多</string>
    <string name="leixing">类型</string>
    <string name="hangye">行业</string>
    <string name="hangye_empty">不限</string>
    <string name="fenlei">分类</string>
    <string name="comedity_kind">产品分类</string>
    <string name="item_kind">项目分类</string>
    <string name="serve_kind">服务分类</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="reset">重置</string>
    <string name="all_city">全国城市</string>
    <string name="city_beijing">北京</string>
    <string name="city_shanghai">上海</string>
    <string name="city_guangzhou">广州</string>
    <string name="city_shenzhen">深圳</string>
    <string name="str_follow">+ 关注</string>
    <string name="str_followed">已关注</string>
    <string name="str_chengxin_id">诚信代码: </string>
    <string name="str_main_comedity">主营产品</string>
    <string name="str_item">项目</string>
    <string name="str_suggest_man">引荐人</string>
    <string name="str_serve">服务</string>
    <string name="str_chengxin_rate">诚信度 :</string>
    <string name="str_like_count">点赞 :</string>
    <string name="str_eval_count">评价 :</string>
    <string name="str_person">个人</string>
    <string name="str_enterprise">企业</string>
    <string name="str_newer">未认证</string>
    <string name="str_enterprise_gongsi">公司</string>
    <string name="str_enterprise_personal">个体户</string>
    <string name="str_read_count">阅读</string>
    <string name="str_share">分享</string>
    <string name="str_collect">收藏</string>
    <string name="str_already_collect">已收藏</string>
    <string name="msg_collect_success">收藏成功</string>
    <string name="msg_cancel_collect_success">收藏取消</string>
    <string name="person_detail">个人信息</string>
    <string name="basic_info">基本信息</string>
    <string name="company_name">所在公司：</string>
    <string name="company_net">公司官网：</string>
    <string name="place">所在地：</string>
    <string name="weixin_number">微信号：</string>
    <string name="position">职位：</string>
    <string name="person_consent">我们承诺</string>
    <string name="enterprise_news_no_comma">公司信息</string>
    <string name="enterprise_news">公司信息：</string>
    <string name="enterprise_net">公司官网：</string>
    <string name="business">主营业务：</string>
    <string name="weixin">微信公众号：</string>
    <string name="responsibly_person_name">负责人姓名：</string>
    <string name="person_position">负责人职位：</string>
    <string name="personal_phonenum">负责人手机号：</string>
    <string name="personal_weixin_num">负责人微信号：</string>
    <string name="office_place">办公地址：</string>
    <string name="recommend">引荐人：</string>
    <string name="business_cert">营业执照：</string>
    <string name="arrow_up">收起</string>
    <string name="all_2000">全部(2000)</string>
    <string name="front_eval_1000">正面评价(1000)</string>
    <string name="all_eval">全部评价</string>
    <string name="front_eval">正面评价</string>
    <string name="back_eval">负面评价</string>
    <string name="front_eval_dot">正面评价: </string>
    <string name="back_eval_dot">负面评价: </string>
    <string name="eval_notify">评价提醒</string>
    <string name="eval_mode_detail">详细评价</string>
    <string name="eval_mode_quick">快捷评价</string>
    <string name="backword_eval">负面评价(1000)</string>
    <string name="eval_content">评价内容</string>
    <string name="arrow_down">展开</string>
    <string name="more_detail">查看全部%d条回复></string>
    <string name="think">想说点什么</string>
    <string name="empty_data">暂无内容</string>
    <string name="empty_evaluate">暂时还没有评论！</string>
    <string name="empty_comedity">暂时还没有产品！</string>
    <string name="empty_item">暂时还没有项目！</string>
    <string name="empty_serve">暂时还没有服务！</string>
    <string name="empty_my_evaluate">尚未评价</string>
    <string name="empty_follow">尚未关注</string>
    <string name="btn_send">发送</string>
    <string name="enterprise_detail">企业信息</string>
    <string name="no_network">网络不给力，点击屏幕重试</string>
    <string name="item_detail">项目详情</string>
    <string name="item_name">华盟本育</string>
    <string name="item_status_name">教育</string>
    <string name="item_market">所在城市: </string>
    <string name="item_comment">项目介绍</string>
    <string name="item_net">网址: </string>
    <string name="item_place">所需资源: </string>
    <string name="item_connect">联系人信息</string>
    <string name="person_name_comma">姓名：</string>
    <string name="phone_number_comma">手机号： </string>
    <string name="cert_number_comma">验证号：</string>
    <string name="company">公司</string>
    <string name="instead_num">诚信代码: </string>
    <string name="instead_rate">诚信度: </string>
    <string name="write_time">发布时间: </string>
    <string name="address_detail">详细地址</string>
    <string name="comedity_detail">产品详情</string>
    <string name="comedity_main">主营产品</string>
    <string name="hot_detail_read_count">阅读: </string>
    <string name="hot_detail_profession">同行企业</string>
    <string name="chengxin_rule_header">尊敬的用户，您好!\n当您使用本网站及APP的时候，表示您接受所有服务条款。您可以对本平台内注册的个人或企业进行评价。评价分为“正面评价”和“负面评价”两类，每类评价针对不同的情况会有不同的加分。\n\n具体规则如下：</string>
    <string name="chengxin_rule_eval_title">评价人：</string>
    <string name="chengxin_rule_eval_content">
        1、推荐好友注册，+2分正面评价。\n
        2、写个完整评价，+5分正面评价。\n
        3、写个快捷评价，+3分正面评价。
    </string>
    <string name="chengxin_rule_update_title">纠错：</string>
    <string name="chengxin_rule_update_content">
        1、纠错成功，+6分正面评价。\n
        2、纠错失败，不加正面评价不加负面评价。\n
        3、被纠错为夸大评价，+4分负面评价。\n
        4、被纠错为虚假评价，+7分负面评价。
    </string>
    <string name="chengxin_rule_receive_title">被评价人：</string>
    <string name="chengxin_rule_receive_content">
        1、被正面评价，+4分正面评价。\n
        2、被负面评价，+4分负面评价。
    </string>
    <string name="chengxin_rule_footer">计算方法：诚信度是以累计的正面评价数量除以总评价数量得出的百分比。\n请每个用户发布真实有效的评价，如果您有什么疑问或建议，可以通过“意见反馈”入口反馈给我们，我们将第一时间处理，感谢您为社会诚信系统做出的贡献。</string>
    <string name="str_sample">  </string>
    <string name="str_sample_datetime">2017-10-27 10:20:00</string>
    <string name="str_sample_title">从事食品行业的人，绝不会吃哪些食品？</string>
    <string name="agreement_title_1">1、服务条款的确认和接纳</string>
    <string name="agreement_content_1">本网站及APP的各项内容和服务的所有权归本公司拥有。用户在接受本服务之前，请务必仔细阅读本条款。用户使用服务，或通过完成注册程序，表示用户接受所有服务条款。 </string>
    <string name="agreement_title_2">2、用户同意：</string>
    <string name="agreement_content_2">
        (1) 提供详尽及准确的个人资料。\n(2) 不断更新注册资料、符合及时、详尽、准确的要求。如果用户提供的资料不准确，本网站有结束服务的权利。
    </string>
    <string name="agreement_title_3">3、用户在本网站和APP的任何行为必须遵循：</string>
    <string name="agreement_content_3">
        (1) 传输资料时必须符合中国有关法规。\n(2) 使用信息服务不作非法用途和不道德行为。\n(3) 不干扰或混乱网络服务。\n(4) 遵守所有使用服务的网络协议、规定、程序和惯例。用户的行为准则是以因特网法规，政策、程序和惯例为根据的。
    </string>
    <string name="agreement_title_4">4、服务条款的修改</string>
    <string name="agreement_content_4">本网站及APP有权在必要时修改条款，将会在页面公布。如果不接受所改动的内容，用户可以主动取消自己的会员资格。如果您不取消自己的会员资格，则视为接受服务条款的变动。</string>
    <string name="agreement_title_5">5、 用户的帐号、密码和安全性</string>
    <string name="agreement_content_5">
        一旦成功注册成为会员，您将有一个密码和用户名。\n
        用户将对用户名和密码的安全负全部责任。另外，每个用户都要对以其用户名进行的所有活动和事件负全责。您可以随时改变您的密码。\n
        用户若发现任何非法使用用户帐号或存在安全漏洞的情况，请立即通告本公司。
    </string>
    <string name="agreement_title_6">6、拒绝提供担保</string>
    <string name="agreement_content_6">
        用户明确同意使用本公司服务，由用户个人承担风险。\n
        本网站及APP不担保服务一定满足用户的要求，也不担保服务不会中断，对服务的及时性、安全性、出错发生都不作担保。\n
        用户理解并接受：任何通过服务取得的信息资料的可靠性有用性取决于用户自己的判断，用户自己承担所有风险和责任。
    </string>
    <string name="agreement_title_7">7、有限责任</string>
    <string name="agreement_content_7">本网站及APP对任何由于使用服务引发的直接、间接、偶然及继起的损害不负责任。\n这些损害可能来自（包括但不限于）：不正当使用服务，或传送的信息不符合规定等。</string>
    <string name="agreement_title_8">8、对用户信息的存储和限制</string>
    <string name="agreement_content_8">本网站及APP不对用户发布信息的删除或储存失败负责，本公司有判定用户的行为是否符合服务条款的要求和精神的保留权利。如果用户违背了服务条款的规定，有中断对其提供服务的权利。</string>
    <string name="agreement_title_9">9、结束服务</string>
    <string name="agreement_content_9">
        本网站及APP可随时根据实际情况中断一项或多项服务，不需对任何个人或第三方负责或知会。\n
        同时用户若反对任何服务条款的建议或对后来的条款修改有异议，或对服务不满，用户可以行使如下权利：\n
        (1) 不再使用本公司的服务。\n
        (2) 通知本公司停止对该用户的服务。
    </string>
    <string name="agreement_title_10">10、信息内容的所有权</string>
    <string name="agreement_content_10">
        本公司的信息内容包括：文字、软件、声音、相片、录象、图表；以及其它信息，所有这些内容受版权、商标、标签和其它财产所有权法律的保护。\n
        用户只能在授权下才能使用这些内容，而不能擅自复制、再造这些内容、或创造与内容有关的派生产品。
    </string>
    <string name="agreement_title_11">11、隐私保护条款</string>
    <string name="agreement_content_11">
        本网站及APP将严格保守用户的个人隐私，为了保证本网站及APP诚信真实的环境，除了需要展示个人信息外，承诺未经过您的同意不将您的个人信息任意披露。\n
        但在以下情形下，我们将无法再提供您前述保证而披露您的相关信息。这些情形包括但不限于：\n
        * 为了您的交易顺利完成，我们不得不把您的某些信息，如您的姓名、联系电话、e-mail等提供给相关如物流服务方，以便于他们及时与您取得联系，提供服务。\n
        * 当您在本网站的行为违反的服务条款，或可能损害他人权益或导致他人遭受损害，只要我们相信披露您的个人资料是为了辨识、联络或采取法律行动所必要的行动时。\n
        * 法律法规所规定的必须披露或公开的个人信息。\n
        * 当司法机关或其它有权机关依法执行公务，要求提供特定个人资料时，我们必须给予必要的配合。
    </string>
    <string name="agreement_title_12">12、适用法律</string>
    <string name="agreement_content_12">
        上述条款将适用中华人民共和国的法律，所有的争端将诉诸于本平台所在地的人民法院。\n
        如发生服务条款与中华人民共和国法律相抵触时，则这些条款将完全按法律规定重新解释，而其它条款则依旧保持约束力。\n
    </string>
</resources>