<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_white"
    tools:context="com.beijing.chengxin.ui.activity.LoginActivity"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/topbar_height"
        android:background="@drawable/rect_blue_gradient">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="@dimen/topbar_height"
            android:layout_height="@dimen/topbar_height"
            android:src="@drawable/nav_back"
            android:background="@color/color_transparent"/>

        <TextView
            style="@style/layout_wm"
            android:text="@string/register"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/color_white"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <View style="@style/layout_m0"/>

    <ImageView
        style="@style/layout_ww"
        android:src="@drawable/login_successful"
        android:contentDescription="图片"/>

    <TextView
        style="@style/layout_mw"
        android:paddingTop="@dimen/margin_large"
        android:text="@string/register_successful"
        android:textSize="18sp"
        android:textColor="@color/color_blue_light"
        android:gravity="center" />

    <TextView
        style="@style/layout_mw"
        android:padding="@dimen/margin_large"
        android:text="@string/register_code"
        android:textSize="16sp"
        android:gravity="center"/>

    <View style="@style/layout_m0"/>

    <LinearLayout
        style="@style/layout_mw"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="45dp"
        android:paddingRight="45dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_register_skip"
            android:layout_width="0dp"
            android:layout_height="@dimen/login_button_height"
            android:layout_weight="1"
            android:background="@drawable/round_rect_blue_gradient"
            android:layout_marginTop="@dimen/margin_normal"
            android:textColor="@color/color_white"
            android:text="@string/register_skip"
            android:textSize="@dimen/text_size_16" />

        <View
            android:layout_width="40dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btn_register_cert"
            android:layout_width="0dp"
            android:layout_height="@dimen/login_button_height"
            android:layout_weight="1"
            android:background="@drawable/round_rect_blue_gradient"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/register_cert"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_size_16" />

    </LinearLayout>

    <View style="@style/layout_m0"
        android:layout_weight="3" />

</LinearLayout>